# carousel

./: Cargo.toml  README.md  WGSL.md  rust-toolchain
asset/font/OpenSans/: OpenSans-Bold.json  OpenSans-Regular.json  OpenSans-SemiBold.json
asset/shader/: text.wgsl  unlit.wgsl  unlit_alpha.wgsl
examples/hello_world/: main.rs
examples/hello_world/assets/: display.json  hello_world.json
examples/hello_world/sys/: hello_world.json
examples/recursive_assets/: main.rs
examples/recursive_assets/assets/: recursive.json
examples/recursive_assets/assets/recursive/: child1.json  child3.json
examples/recursive_assets/sys/: display.json  recursive.json
examples/recursive_assets/sys/recursive/: child2.json
examples/serpent/: main.rs  state.rs
examples/serpent/assets/: actions.json  display.json
examples/serpent/state/: base.rs  game.rs  menu.rs
examples/serpent/sys/: actions.json
src/: asset.rs  lib.rs  platform.rs  prelude.rs  render.rs  sim.rs  time.rs  util.rs
src/asset/: loader.rs  notify.rs  storage.rs
src/platform/: action.rs  input.rs  key.rs  message.rs
src/render/: buffer.rs  camera.rs  canvas.rs  client.rs  curve.rs  mesh.rs  message.rs  pipeline.rs  text.rs  view.rs
src/render/client/: camera.rs  curve.rs  instance.rs  rectangle.rs  sprite.rs  text.rs
